# huffman-tree

./: CMakeLists.txt  Makefile  README.md  main.cpp  main_text.cpp
inc/: HuffmanEncoding.hpp  MinHeapTree.hpp
src/: HuffmanEncoding.cpp  MinHeapTree.cpp
